Fixed issue: >>>>1150 - Modules search-text is not getting wrapped in Create and Assign screen

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -73,6 +73,8 @@ p,a,img,text,span,.noselect{-webkit-touch-callout:none;-webkit-user-select:none;
     height: 26px;
     padding-left: 5px;
 }
+#searchModule-create, #eteSearchModules, #eteSearchScenarios, #searchModule-assign{padding-right: 28px;}
+#searchModule-create, #searchModule-assign{padding-left: 4px;}
 .endtoend-modules-right-upper label{
 	margin-bottom: 0;
     margin-top: 7px;
@@ -83,12 +85,12 @@ p,a,img,text,span,.noselect{-webkit-touch-callout:none;-webkit-user-select:none;
 }
 .endtoend-modules-right-upper img{
 	float: right;
-    left: 222px;
+    left: 225px;
     margin-top: 1px;
 }
 .searchModuleimg{
 	position: relative;
-    right: 100px;
+    right: 103px;
     top: 3px;
     border-left: 1px solid #ccc;
     padding-left: 3px;
